--- a/.github/workflows/prebuild-2.11.1.yaml
+++ b/.github/workflows/prebuild-2.11.1.yaml
@@ -98,7 +98,7 @@ jobs:
     strategy:
       matrix:
         node: [8, 9, 10, 11, 12, 13, 14, 16, 18]
-        canvas_tag: [] # e.g. "v2.6.1"
+        canvas_tag: ['v2.11.1'] # e.g. "v2.6.1"
     name: ${{ matrix.canvas_tag}}, Node.js ${{ matrix.node }}, macOS
     runs-on: macos-latest
     env:
@@ -164,7 +164,7 @@ jobs:
     strategy:
       matrix:
         node: [8, 9, 10, 11, 12, 13, 14, 16, 18]
-        canvas_tag: [] # e.g. "v2.6.1"
+        canvas_tag: ['v2.11.1'] # e.g. "v2.6.1"
     name: ${{ matrix.canvas_tag}}, Node.js ${{ matrix.node }}, Windows
     runs-on: windows-latest
     env:
