--- a/.github/workflows/prebuild-2.11.1.yaml
+++ b/.github/workflows/prebuild-2.11.1.yaml
@@ -33,11 +33,11 @@ jobs:
     env:
       CANVAS_VERSION_TO_BUILD: ${{ matrix.canvas_tag }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.canvas_tag }}
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
@@ -104,11 +104,11 @@ jobs:
     env:
       CANVAS_VERSION_TO_BUILD: ${{ matrix.canvas_tag }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.canvas_tag }}
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
@@ -170,17 +170,15 @@ jobs:
     env:
       CANVAS_VERSION_TO_BUILD: ${{ matrix.canvas_tag }}
     steps:
-      # TODO drop when https://github.com/actions/virtual-environments/pull/632 lands
-      - uses: numworks/setup-msys2@v1
+      - uses: msys2/setup-msys2@v2
         with:
-          update: true
-          path-type: inherit
+          msystem: UCRT64
 
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ matrix.canvas_tag }}
 
@@ -188,13 +186,13 @@ jobs:
         run: |
           npm install -g node-gyp
           npm install --ignore-scripts
-          msys2do . prebuild/Windows/preinstall.sh
-          msys2do cp prebuild/Windows/binding.gyp binding.gyp
-          msys2do node-gyp configure
-          msys2do node-gyp rebuild -j 2
+          msys2 -c '. prebuild/Windows/preinstall.sh'
+          msys2 -c 'cp prebuild/Windows/binding.gyp binding.gyp'
+          msys2 -c 'node-gyp configure'
+          msys2 -c 'node-gyp rebuild -j 2'
 
       - name: Bundle
-        run: msys2do . prebuild/Windows/bundle.sh
+        run: msys2 -c '. prebuild/Windows/bundle.sh'
 
       - name: Test binary
         # By not running in msys2, this doesn't have access to the msys2 libs
@@ -203,7 +201,7 @@ jobs:
       - name: Make asset
         id: make_bundle
         # I can't figure out why this isn't an env var already. It shows up with `env`.
-        run: msys2do UPLOAD_TO=${{ env.UPLOAD_TO }} CANVAS_VERSION_TO_BUILD=${{ env.CANVAS_VERSION_TO_BUILD}} . prebuild/tarball.sh
+        run: msys2 -c 'UPLOAD_TO=${{ env.UPLOAD_TO }} CANVAS_VERSION_TO_BUILD=${{ env.CANVAS_VERSION_TO_BUILD}} . prebuild/tarball.sh'
 
       - name: Upload
         uses: actions/github-script@0.9.0
